[package]
name = "diesel_geometry"
version = "1.4.0"
authors = ["YetAnotherMinion <yam@thinkalexandria.com>"]
license = "MIT OR Apache-2.0"
description = "Adds support for geometric types and functions to Diesel."
readme = "README.md"
documentation = "https://docs.rs/diesel_geometry"
repository = "https://github.com/ThinkAlexandria/diesel_geometry"
keywords = ["database", "sql", "orm"]
categories = ["database"]

[dependencies]
byteorder = "1.0"
diesel = { version = ">=1.2, <1.5", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
cfg-if = " 0.1"
dotenv = ">=0.8, <0.14"

[features]
default = ["postgres"]
postgres = []
